@@ -335,6 +335,9 @@ static Image *ReadJP2Image(const ImageInfo *image_info,ExceptionInfo *exception)
   Image
     *image;
 
+  int
+    format;
+
   jas_cmprof_t
     *cm_profile;
 
@@ -397,7 +400,8 @@ static Image *ReadJP2Image(const ImageInfo *image_info,ExceptionInfo *exception)
   jp2_stream=JP2StreamManager(image);
   if (jp2_stream == (jas_stream_t *) NULL)
     ThrowReaderException(DelegateError,"UnableToManageJP2Stream");
-  jp2_image=jas_image_decode(jp2_stream,-1,0);
+  format=jas_image_getfmt(jp2_stream);
+  jp2_image=jas_image_decode(jp2_stream,format,0);
   if (jp2_image == (jas_image_t *) NULL)
     {
       (void) jas_stream_close(jp2_stream);
