@@ -1,3 +1,7 @@
+2013-04-08  6.8.4-9 Cristy  <quetzlzacatenango@image...>
+  * Pass JP2 format type to decoder (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23038).
+
 2013-04-07  6.8.4-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.4-8, SVN revision 11743.
 
